--- a/css/style.css
+++ b/css/style.css
@@ -809,79 +809,81 @@ img{
 }
 
 .footer {
-  background-color: var(--universo-blue);
-  color: var(--white-color);
-  padding: 4rem 2rem 2rem;
+    background-color: var(--universo-blue);
+    color: var(--white-color);
+    padding: 4rem 2rem 2rem;
 }
 
 .footer__container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  justify-content: space-between;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;  
+    max-width: 1200px;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .footer__section {
-  flex: 1 1 250px;
-  min-width: 200px;
+    flex: 0 0 30%;
+    min-width: 180px;
+    padding: 0 0.5rem;
+
 }
 
 .footer__title {
-  font-family: "Gotham", sans-serif;
-  font-size: 1.25rem;
-  font-weight: 600;
-  margin-bottom: 1rem;
-  color: var(--white-color);
+    font-family: "Gotham", sans-serif;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: var(--white-color);
 }
 
 .footer__socials {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .footer__social-link {
-  display: flex;
-  align-items: center;
-  gap: 0.8rem;
-  font-size: 1rem;
-  text-decoration: none;
-  color: var(--white-color);
-  transition: color 0.2s ease;
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+    font-size: 1rem;
+    text-decoration: none;
+    color: var(--white-color);
+    transition: color 0.2s ease;
 }
 
 .footer__social-link:hover {
-  color: var(--alice-blue);
+    color: var(--alice-blue);
 }
 
 .footer__hours {
-  font-size: 1rem;
-  line-height: 1.6;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+    font-size: 1rem;
+    line-height: 1.6;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .social-icon {
-  width: 24px;
-  height: 24px;
+    width: 24px;
+    height: 24px;
 }
 
 .footer__bottom {
-  text-align: center;
-  margin-top: 3rem;
-  padding-top: 1rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+    text-align: center;
+    margin-top: 3rem;
+    padding-top: 1rem;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .footer__bottom p {
-  font-size: 0.875rem;
-  margin: 0;
-  color: rgba(255, 255, 255, 0.8);
+    font-size: 0.875rem;
+    margin: 0;
+    color: rgba(255, 255, 255, 0.8);
 }
-
 
 /* Ajustes en pantallas medianas */
 @media (max-width: 1200px) {
@@ -935,7 +937,7 @@ img{
         top: 45%;
     }
     .hero_content img {
-        width: 60%;
+        width: 40%;
     }
 
     /* Nuestros Servicios */
@@ -960,19 +962,29 @@ img{
     }
 
     .contacto-contenido {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 90%;
         max-width: 1100px;      
         margin: 0 auto;        
         gap: 2rem;             
     }
+
     .textoContacto{
         padding: 0 3rem;
     }
     .contacto-formulario {
-        flex: 2 1 65%;          /* ocupa 65% del ancho disponible */
+        flex: 0 1 850px;  
+        margin: 0 auto;      
     }
+
     .contacto-visual {
         display: none;
+    }
+
+    .footer{
+        padding: 4rem 2rem 2rem;
     }
 }
 
@@ -980,9 +992,10 @@ img{
 @media screen and (max-width: 900px) {
     
     .hero-section {
-        margin-top: 60px;                
-        height: calc(100vh - 60px);      
+        margin-top: 60px;
+        height: 95vh;
     }
+
 
     .cartas-contenedor {
         display: flex;
@@ -1012,6 +1025,9 @@ img{
         padding: 0 1.5rem;       
         box-sizing: border-box;
     }
+    .footer{
+        padding: 2.7rem 1.5rem 1.5rem;
+    }
 
     .footer__container {
         display: flex;
@@ -1035,7 +1051,7 @@ img{
     .footer__bottom p {
         font-size: 0.8rem;
     }
-}
+}   
 
 @media (max-width: 768px) {
     .hero-section {
@@ -1071,6 +1087,11 @@ img{
     .contacto-formulario {
         padding: 0 1rem;
     }
+
+    .footer{
+        padding: 2rem 1rem 1rem;
+    }
+
     .footer__container {
         flex-direction: column;
         align-items: center;
@@ -1125,6 +1146,11 @@ img{
 
     .contacto-formulario{
         padding: 0 0.05rem;
+    }
+
+    .footer__section{
+        flex: 0 0 100%;
+        text-align: center;
     }
 
     .footer__social-link,
